force-app/main/default/objects/Bank_CRM_Settings__mdt/Bank_CRM_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Deployable Bank CRM policy: threshold, routing keys, retry limits, and integration enablement.</description>
    <label>Bank CRM Settings</label>
    <pluralLabel>Bank CRM Settings</pluralLabel>
</CustomObject>