force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/DefaultManagerUsername__c.field-meta.xml
<CustomField>
    <fullName>DefaultManagerUsername__c</fullName>
    <description>Fallback manager username (stable key; not an org-specific Id).</description>
    <label>Default Manager Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>