force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/DefaultQueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DefaultQueueDeveloperName__c</fullName>
    <description>Fallback queue developer name for high-value Task ownership.</description>
    <label>Default Queue Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>