force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/HighValueThreshold__c.field-meta.xml
<CustomField>
    <fullName>HighValueThreshold__c</fullName>
    <description>High-value loan threshold. Escalation uses strictly greater than this value.</description>
    <label>High Value Threshold</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>