force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/IntegrationEnabled__c.field-meta.xml
<CustomField>
    <fullName>IntegrationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch for outbound external approval integration.</description>
    <label>Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>