force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/ManagerNotificationType__c.field-meta.xml
<CustomField>
    <fullName>ManagerNotificationType__c</fullName>
    <description>Custom Notification Type developer name used by Flow.</description>
    <label>Manager Notification Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>