force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/RetryBaseDelayMinutes__c.field-meta.xml
<CustomField>
    <fullName>RetryBaseDelayMinutes__c</fullName>
    <description>Base delay in minutes for integration retry backoff.</description>
    <label>Retry Base Delay Minutes</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>