force-app/main/default/objects/Bank_CRM_Settings__mdt/fields/RetryLimit__c.field-meta.xml
<CustomField>
    <fullName>RetryLimit__c</fullName>
    <description>Maximum integration retry attempts before exhaustion.</description>
    <label>Retry Limit</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>